service page is replaced with menus page

--- a/menus.html
+++ b/menus.html
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="aboutUs.html">About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="service.html">Service</a>
+                <a class="nav-link" href="menus.html">Menus</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Gallery</a>
@@ -60,20 +60,75 @@
       </div>
     </section>
 
-    <section id="customDesign" class="akjghjeerahj">
-      <div class="container tac">
-        <div class="uprs">
-          <h3>Custom Design And Corporate Orders</h3>
+    <section id="menus" class="akjghjeerahj">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <a href="">
+              <div class="box">
+                <div class="image tac">
+                  <img src="imgs/cake2.jpg" alt="" />
+                </div>
+                <div class="titleAndPrice tac">
+                  <h3>Dark Chocolate</h3>
+                  <h4>Rs. 800</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="">
+              <div class="box">
+                <div class="image tac">
+                  <img src="imgs/cake3.jpg" alt="" />
+                </div>
+                <div class="titleAndPrice tac">
+                  <h3>Chocolate Cake</h3>
+                  <h4>Rs. 900</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="">
+              <div class="box">
+                <div class="image tac">
+                  <img src="imgs/deluxe-choco-cake.jpg" alt="" />
+                </div>
+                <div class="titleAndPrice tac">
+                  <h3>German Chocolate Cake</h3>
+                  <h4>Rs. 850</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="">
+              <div class="box">
+                <div class="image tac">
+                  <img src="imgs/dark-cho.jpg" alt="" />
+                </div>
+                <div class="titleAndPrice tac">
+                  <h3>Triple Chocolate Fudge Cake</h3>
+                  <h4>Rs. 1000</h4>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a href="">
+              <div class="box">
+                <div class="image tac">
+                  <img src="imgs/Hazelnut-Chocolate-Cake_1400x.jpg" alt="" />
+                </div>
+                <div class="titleAndPrice tac">
+                  <h3>Hazelnut Chocolate Cake</h3>
+                  <h4>Rs. 900</h4>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
-        <div class="pgrs">
-          <h6>Have a special design in mind?</h6>
-          <h6>Looking to create something unique for that special occasion?</h6>
-          <h6>Wanting to impress your family and friends?</h6>
-        </div>
-        <h2>Contact for Custom Orders</h2>
-        <a href="contactUs.html">
-          <button class="btnOtrs">Contact Us</button>
-        </a>
       </div>
     </section>
 
