--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="aboutUs.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html">Service</a>
+                <a class="nav-link" href="menus.html">Menus</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Gallery</a>
