Cake Details Page and Top Header Added

--- a/cakeDetails.html
+++ b/cakeDetails.html
@@ -62,10 +62,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="aboutUs.html">About</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="menus.html">Menus</a>
               </li>
               <li class="nav-item">
@@ -80,112 +80,74 @@
       </div>
     </section>
 
-    <section id="aboutUs" class="akjghjeerahj">
+    <section id="breadcrumb" class="akjghjeerahj">
       <div class="container">
-        <div class="head tac">
-          <h5 class="ogclr">About Us</h5>
-          <h2>Welcome To Fresh Bakery</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-6 left">
-            <img src="imgs/abtCake.png" alt="" />
-          </div>
-          <div class="col-md-6 right">
-            <h3 class="ajfgvb5reg">
-              "Welcome to Cake Zone, where passion meets pastry. Since [Year],
-              we’ve been dedicated to baking the freshest and most delightful
-              treats. Our mission is to create memorable experiences with every
-              bite, using the finest ingredients and a touch of love. Discover
-              our story and meet the team that brings sweetness to your special
-              moments."
-            </h3>
-
-            <div class="acheve">
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="healthy tac">
-                    <i class="fa-regular fa-heart"></i>
-                    <h3>100% Healthy</h3>
-                    <h4>Emphasize your commitment to health.</h4>
-                  </div>
-                </div>
-                <div class="col-md-5">
-                  <div class="award tac">
-                    <i class="fa-solid fa-award"></i>
-                    <h3>Award Winning</h3>
-                    <h4>We have been awarded as the best cake seller.</h4>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h3><a href="menus.html">Cake</a> > Dark Chocolate</h3>
       </div>
     </section>
 
-    <section id="expSpe" class="aojnjiea">
+    <section id="cakeDetails" class="aojnjiea">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <h3>Our Experience</h3>
-            <h4>5 Years+</h4>
+          <div class="col-md-6">
+            <div class="image">
+              <img src="imgs/cake2.jpg" alt="" />
+            </div>
           </div>
-          <div class="col-md-3">
-            <h3>Cake Specialist</h3>
-            <h4>2+</h4>
-          </div>
-          <div class="col-md-3">
-            <h3>Complete Project</h3>
-            <h4>5000+</h4>
-          </div>
-          <div class="col-md-3">
-            <h3>Happy Client</h3>
-            <h4>3500+</h4>
+          <div class="col-md-6">
+            <div class="title">
+              <h2>Dark Chocolate</h2>
+              <h3>Rs. 800/P</h3>
+
+              <h4 class="my-4">Dark Chocolate cake with extra Chocolate.</h4>
+            </div>
+            <div class="othersCnct">
+              <form action="">
+                <div class="input">
+                  <input type="number" value="1" />
+
+                  <select name="" id="">
+                    <option value="">1 Pound</option>
+                    <option value="">2 Pound</option>
+                    <option value="">3 Pound</option>
+                  </select>
+                </div>
+
+                <div class="buttons">
+                  <button class="addToCart">Add to Cart</button>
+                  <button class="buyNow">Buy Now</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="teamMember" class="aojnjiea">
+    <section id="relatedProduct" class="aojnjiea">
       <div class="container">
-        <div class="upper tac">
-          <h3>Team Members</h3>
-          <h2>Our Master Chefs</h2>
+        <div class="titleRelated tac">
+          <h2>x Related Product x</h2>
         </div>
-        <div class="cnct">
-          <div class="row">
-            <div class="col-md-5">
-              <div class="card">
-                <div class="image">
-                  <img src="imgs/chef.jpg" alt="" />
+        <div class="row">
+          <div class="col-md-4">
+            <a href="cakeDetails.html">
+              <div class="box">
+                <div class="image tac">
+                  <img src="imgs/cake2.jpg" alt="" />
                 </div>
-                <div class="down tac">
-                  <div class="hahyit">
-                    <h3>Sambhav Gyawali</h3>
-                    <h4>Head Chef</h4>
-                  </div>
+                <div class="titleAndPrice tac">
+                  <h3>Dark Chocolate</h3>
+                  <h4>Rs. 800</h4>
                 </div>
               </div>
-            </div>
-            <div class="col-md-5">
-              <div class="card">
-                <div class="image">
-                  <img src="imgs/chef.jpg" alt="" />
-                </div>
-                <div class="down tac">
-                  <div class="hahyit">
-                    <h3>Sushant Aryal</h3>
-                    <h4>Cake Decorator</h4>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
     </section>
 
-    <div id="footer" class="aojnjiea">
+    <section id="footer">
       <div class="container">
         <div class="ahgah">
           <div class="fb white">
@@ -216,7 +178,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <script src="script.js"></script>
     <script
