--- a/contactUs.html
+++ b/contactUs.html
@@ -22,6 +22,26 @@
     <link rel="stylesheet" href="media.css" />
   </head>
   <body>
+    <section id="topHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <h3>+977 9876543210</h3>
+          </div>
+          <div class="col-md-6 col-sm-6 tae">
+            <a href="">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+            <span class="mx-4"> | </span>
+            <a href="">
+              <span>Login</span>
+              <!-- <span>My Account</span> -->
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="navbar">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
